templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-cal-service
  namespace: argocd
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: python-cal-app
