templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pythoncal.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-cal-app
                port:
                  number: 80
